@@ -7,7 +7,8 @@ endif
 
 EXTRA_DIST = rulfig1.png rulfig2.png rulfig3.png rulfig4.png rulfig5.png \
 	rulfig1.txt rulfig2.txt rulfig3.txt rulfig4.txt rulfig5.txt \
-	annealing.gp annealing.txt fdl.texi gnubg.xml texinfo.dtd
+	annealing.gp annealing.txt fdl.texi gnubg.xml texinfo.dtd \
+	annealing.png annealing.eps
 SUFFIXES = .png .eps .texi .html .txt .xml
 EPSFILES = rulfig1.eps rulfig2.eps rulfig3.eps rulfig4.eps rulfig5.eps \
 	annealing.eps
@@ -43,6 +44,7 @@ annealing.png: annealing.eps
 	pstopnm -portrait -xsize 1024 $<
 	pnmscale 0.5 < annealing.eps001.ppm | pnmtopng > \
 		$(srcdir)/annealing.png
+	-rm annealing.eps001.ppm
 
 .png.eps:
 	$(PNGTOPNM) -mix -background 1.0,1.0,1.0 < $< | $(PNMTOPS) -noturn > $@
