@@ -1,3 +1,7 @@
+Fri Dec 13 16:08:36 2002  Gary Wong  <gtw@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Add some necessary files.
+
 Sat Dec  7 15:06:33 2002  Joern Thyssen  <jthyssen@dk.ibm.com>
 
 	* bearoff.texi: add MD5 sums
